--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Critian Buitrago",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "mongoose": "^5.4.20"
   }
