--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "mongoose": "^5.4.20"
+  },
+  "devDependencies": {
+    "sparkpost": "^2.1.4"
   }
 }
