--- a/package.json
+++ b/package.json
@@ -11,10 +11,9 @@
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.16.4",
-    "mongoose": "^5.4.20"
-  },
-  "devDependencies": {
-    "sparkpost": "^2.1.4"
+    "mongoose": "^5.4.20",
+    "nodemailer": "^6.4.6"
   }
 }
