--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-MAIL="cm-punk-619@hotmail.com"
+FROMMAIL="cm-punk-619@hotmail.com"
+TOMAIL="cm-punk-619@hotmail.com"
 PASS="11-Lqsqst-11"
 HOST="hotmail"
