--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "task web api",
   "main": "index.js",
   "scripts": {
-    "start": "index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js"
   },
   "author": "Critian Buitrago",
   "license": "MIT",
@@ -14,6 +15,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "mongoose": "^5.4.20",
-    "nodemailer": "^6.4.6"
+    "nodemailer": "^6.4.6",
+    "nodemon": "^2.0.7",
+    "xoauth2": "^1.2.0"
   }
 }
